--- a/.gitignore
+++ b/.gitignore
@@ -85,5 +85,6 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+.DS_Store
 
 # End of https://www.toptal.com/developers/gitignore/api/swift
